# qqbot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/qqbot/: __init__.py  __main__.py  cli.py  config.py
src/qqbot/agent/: __init__.py  turtle_agent.py
src/qqbot/agent/models/: __init__.py  base.py  factory.py  gpt.py  grok.py  sjtu.py
src/qqbot/agent/personas/: __init__.py  base.py  factory.py  lkp.txt  maoniang.txt  mean.txt  normal.txt
src/qqbot/agents/: __init__.py  base.py  factory.py  registry.py
src/qqbot/agents/builtin/: __init__.py  agent.py
src/qqbot/agents/deepseek/: __init__.py  agent.py  client.py
src/qqbot/agents/deepseekv4/: __init__.py  agent.py  client.py  settings.py
src/qqbot/agents/sjtu/: __init__.py  agent.py  client.py  settings.py
src/qqbot/bot/: __init__.py  agent_manager.py  client.py  commands.py  member_cache.py  onebot.py  parser.py
src/qqbot/commands/: __init__.py  agent.py  base.py  registry.py  router.py
src/qqbot/utils/: __init__.py  logger.py
