[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qqbot"
version = "0.1.0"
description = "A QQ bot powered by TurtleAgent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "python-dotenv",
    "websockets",
]

[project.scripts]
qqbot = "qqbot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
